traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:1: error: Missing closing brace `}' assumed here
var a : Int = 0
^TraversalDiagonal:1: error: expected class or object definition
var a : Int = 0
^TraversalDiagonal:2: error: expected class or object definition
var counter : Int = 0;
^TraversalDiagonal:3: error: expected class or object definition
var finalpos : Boolean = true;
^TraversalDiagonal:4: error: expected start of definition
override def run() {
         ^TraversalDiagonal:23: error: Missing closing brace `}' assumed here
      }
      ^TraversalDiagonal:28: error: Missing closing brace `}' assumed here
	override def forward(i:Int)  { 
        ^